--- a/index.html
+++ b/index.html
@@ -8,12 +8,28 @@
 </head>
 <body>
   <header class="site-header">
-    <div class="container">
-      <h1 class="brand">Axel — Portafolio</h1>
-      <p class="subtitle">Creador de contenido · Community Manager</p>
+  <div class="container header-inner">
+    <div class="profile">
+      <img id="profileImage" src="assets/profile.jpg" alt="Foto de perfil de Axel" width="96" height="96" />
     </div>
-  </header>
 
+    <div class="bio">
+      <h1 class="brand">Axel Romero Neyra</h1>
+      <p class="subtitle">Comunicación digital · Creador de contenido · Community Manager</p>
+
+      <div class="contact-row" aria-label="Contactos">
+        <a class="contact-icon" href="mailto:axelromeroneyra@gmail.com" id="emailLink" title="Enviar email" aria-label="Enviar email" target="_blank" rel="noopener noreferrer">
+          <img src="assets/icon-email.svg" alt="Email" width="36" height="36" />
+        </a>
+
+        <a class="contact-icon" href="https://wa.me/5493834584178" id="whatsappLink" title="Abrir WhatsApp" aria-label="Abrir WhatsApp" target="_blank" rel="noopener noreferrer">
+          <img src="assets/icon-whatsapp.svg" alt="WhatsApp" width="36" height="36" />
+        </a>
+      </div>
+    </div>
+  </div>
+</header>
+  
   <main class="container">
     <section class="gallery" id="gallery"></section>
   </main>
@@ -47,3 +63,4 @@
   <script src="scripts.js"></script>
 </body>
 </html>
+
