--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         <a class="contact-icon" href="https://wa.me/5493834584178" id="whatsappLink" title="Abrir WhatsApp" aria-label="Abrir WhatsApp" target="_blank" rel="noopener noreferrer">
           <img src="assets/icon-whatsapp.svg" alt="WhatsApp" width="36" height="36" />
         </a>
+
+        <a class="contact-icon" href="https://drive.google.com/file/d/1iRaHemSFOQCsnTS7u0tbPK6ZUerBBTQ0/view?usp=sharing" title="Ver CV" aria-label="Ver CV" target="_blank" rel="noopener noreferrer">
+        <img src="assets/icon-cv.svg" alt="CV" width="36" height="36" />
+        </a>
       </div>
     </div>
   </div>
@@ -62,5 +66,6 @@
   <script src="scripts.js"></script>
 </body>
 </html>
+
 
 
